fix: wire mockito javaagent into spin sub-module surefire config (#47)